:art: Fix binding of classpath*: to resource arrays and collections